--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "sketch": ">=3.0"
   },
   "skpm": {
-    "name": "brandfolder",
+    "name": "Brandfolder",
     "manifest": "src/manifest.json",
     "main": "brandfolder.sketchplugin",
     "assets": [
