--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "description": "Speed up your design workflow by accessing your Brandfolder asset library right from Sketch",
   "main": "index.js",
   "keywords": [],
-  "author": "",
+  "author": "Kevin Schwindt (Brandfolder)",
   "license": "ISC",
   "repository": {
     "type": "git",
